--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,3 +8,10 @@ body{
     padding: 0;
     margin: 0;
 }
+a{
+    color:inherit;
+    text-decoration: none;
+}
+*{
+    box-sizing: border-box;
+}
